--- a/views/main/index.html
+++ b/views/main/index.html
@@ -56,7 +56,7 @@
 	<!-- //full-contents -->
 	
 	<div id="footer">
-		<div>Copyright ⓒ 2020 황일영, All right reserved</div>
+		<div>Copyright ⓒ 2020 유지은, All right reserved</div>
 	</div>
 	<!-- //footer -->
 	
