--- a/views/board/list.html
+++ b/views/board/list.html
@@ -131,7 +131,7 @@
 	<!-- //contents -->
 	
 	<div id="footer">
-			Copyright ⓒ 2020 황일영, All right reserved
+			Copyright ⓒ 2020 유지은, All right reserved
 	</div>
 	<!-- //footer -->
 	
