--- a/views/board/writeForm.html
+++ b/views/board/writeForm.html
@@ -123,7 +123,7 @@
 	<!-- //contents -->
 
 	<div id="footer">
-		Copyright ⓒ 2020 황일영, All right reserved
+		Copyright ⓒ 2020 유지은, All right reserved
 	</div>
 	<!-- //footer -->
 
