--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /* 게시판 공통 */
 .form-group {
 	padding: 0px 0px 10px 0px;
@@ -54,46 +53,80 @@ textarea {
 
 
 /* 리스트 */
-
-
-#main-content-header ol {list-style-type: none;
-float: left;}        
-#main-content-header li {float: left;}
-#main-content-header li:after {
-	content: ">";
-	padding: 0px 10px 0px 10px;
-}
-#main-content-header li.last:after {content: "";}
-
-/*게시판*/
-
-table {
-	text-align: center;
-	border-collapse: collapse;
-}
-table tr{
-	height: 30px;
+#main-content-header > h3 {
+	float : left;
+	/* border : 1px solid #000; */	
 }
 
-table>thead>tr>th {
-	background-color: #dddddd;
-	border-top: 1px solid #808080;
+#main-content-header ol {
+	float : right;
 }
 
-table>tbody>tr>td {
-	border-top : 1px dotted #bfbfbf;
+#main-content-header ol>li {
+	float : left;
+	padding : 0px 5px 0px 0px;
 }
-.tr-bb>td {
-	border-bottom: 1px solid #808080;
+.next-after:after {
+	content :" > ";
 }
 
+/* 검색 창  */
+#main-content > #search-button {
+	float : right;
+	/* border : 1px solid #000; */
+	padding : 30px 0px 20px 0px;
+}
+.search-bar {
+	width : 180px;
+}
 
+/* 게시판 - 테이블  */
+#list {
+	float: left;
+	margin : 0px 0px 20px 0px;
+}
+table, th, td {
+	border-collapse : collapse;
+	text-align : center;
+}
+#list>table>thead>tr>th {
+	border-top : 2px solid #808080;
+	border-bottom :  1px dotted #808080;
+	background-color :  #dddddd;
+	padding : 10px 0px;
+	/* border-right : 1px solid #000; */
+}
+#list>table>tbody>tr>td {
+	border-bottom : 1px dotted #808080;
+	padding : 10px 0px;
+}
+.border-bold {
+	border-bottom : 2px solid #808080;
+}
+/* 테이블번호 - 글쓰기 버튼 */
+#table-number {
+	margin : 0px 0px 30px 0px;
+}
+#table-number ul {
+	margin : 0px 0px 0px 300px;
+}
+#table-number ul>li {
+	float : left;
+	padding : 5px;
+}
+#table-number ul>li:hover {
+	color : #228B22;
+}
+.write-button {
+	float : right;
+}
 
 
 /* 글쓰기폼 */
 #main-content-body .form-title {
 	width: 80px;
 	display: inline-block;
+	border : 1px solid red;
 }
 
 #main-content-body #sel-board {
@@ -111,4 +144,39 @@ table>tbody>tr>td {
 #main-content-body #txt-content {
 	width: 808px;
 	height: 200px;
+}
+
+/* 회원가입 폼  */
+
+
+#txt-introduction {
+	width : 500px;
+	height : 100px;
+	
+}
+.sign-form-group {
+	border-bottom : 1px solid #ddd;
+	padding : 10px 0px 10px 0px;
+}
+/* .sign-form-group .form-title {
+	font-size : 13px;
+} */
+.sign-form-group > input[type="text"]{
+	padding: 3px 2px 3px 2px;
+}
+
+.sign-form-group > input[type="password"]{
+	padding: 3px 2px 3px 2px;
+}
+.sign-form-group > select {
+	padding: 3px 2px 3px 2px;
+	width : 120px;
+}
+.sign-form-group .block {
+	display : block;
+	margin : 5px 0px 0px 85px;
+	width : 500px;
+}
+.txt-top {
+	vertical-align : top;
 }
