--- a/assets/css/mysite.css
+++ b/assets/css/mysite.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
-
-/********************초기화*********************/
-
-
+/* *************초기화************ */
 /* 여백초기화 */
-body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, h6, input,
-fieldset, legend, p, select, table, th, td, tr, 
-textarea, button, form {
-	margin: 0; padding: 0;
+body, div, ul, li, dl, dt, ol, 
+h1, h2, h3, h4, h5, h6, input, 
+fieldset, legend, p, select, 
+table, th, td, tr, textarea, 
+button, form {
+    margin: 0; padding: 0;
 }
 
 body {
@@ -15,21 +14,29 @@ body {
 	font-family: "맑은 고딕", 돋움, 굴림;
 }
 
+
 /* 리스트 초기화 */
 ul, ol {list-style-type: none;}
 
 /* 링크 초기화 */
-a:link {color: #000000; text-decoration: none;}
-a:visited {color: #000000; text-decoration: none;}
-a:hover {color: #000000; text-decoration: none;}
-a:active {color: #000000; text-decoration: none;}
+a:link    {color: #000000; text-decoration: none;}	  /* 방문전 링크일때 자홍색 선없음 */
+a:visited {color: #000000; text-decoration: none;} 	  /* 방문했던 링크일때 회색 위에선*/
+a:hover   {color: #000000; text-decoration: none;}   /* 마우스오버일때 파란색 아래선 */
+a:active  {color: #000000; text-decoration: none;}   /* 클릭했을때 빨간색 중앙선*/ 
 
 
 /* clearfix */
-.clearfix{*zoom:1;}
-.clearfix:before, .clearfix:after {display: block; content: ""; line-height: 0;}
-.clearfix:after {clear: both;}
-
+.clearfix{
+	*zoom:1;
+}
+.clearfix:before, .clearfix:after {
+	display: block;
+	content: "";
+	line-height: 0;
+	}
+.clearfix:after {
+	clear: both;
+}
 
 .bold {font-weight: bold;}
 
@@ -38,83 +45,81 @@ a:active {color: #000000; text-decoration: none;}
 }
 
 
-/* ******************레이아웃****************** */
+/* ******************레이아웃************************** */
 #wrap {
-	margin: 0px auto;  /*가운데 정렬*/
+	margin: 0px auto;
 	width: 1000px;
 }
 
-#wrap > #header {		
+#wrap > #header {
 	padding: 10px 0px 10px 0px;
-	border-bottom: 1px solid #bfbfbf;	
+	border-bottom: 1px solid #bfbfbf;
 }
 
 #wrap > #nav {
 	padding: 10px 0px 10px 0px;
 	border-bottom: 1px solid #bfbfbf;
-   
 }
 
-/*가로 전체사용할 때*/
-
+/* 가로 전체사용할때 */
 #wrap > #full-contents {
 	padding: 40px 20px 40px 20px;
-	
+	/* background-color: #ff00ff; */
 }
-/*가로 서브메뉴 있을 때*/
-#contents {
+
+/* 가로 서브메뉴 있을때 */
+#wrap > #contents {
 	padding: 30px 0px 30px 0px;
 }
 
 
-#wrap > #footer {
+ #wrap > #footer {
 	padding: 20px 0px 20px 0px;
 	background-color: #DDDDDD;
-}
+} 
 
 /*
-#wrap > #footer {
+ #wrap > #footer {
 	height: 50px;
 	background-color: #DDDDDD;
-}
+} 
 */
 
 
-
-/* ******************헤더(로고 		 로그인,회원가입)****************** */
-
-#header > h1 {     	/* >는 너무 경직되서 header h1 으로 유연하게 써도 됌 */
+/* ******************해더(로고  로그인,회원가입)************************** */
+#header > h1 {
 	float: left;
 	color: #79B30B;
 	font-size: 35px;
 	font-weight: bold;
 }
 
-#header  ul {
+#header ul {
 	margin: 15px 0px 0px 0px;
-	float: right ;	
+	float: right;
 }
-	
-#header ul>li {			/*그냥 li로 쓰면 본문에 있는 li도 적용 될수 잇음 ,기능을 한정짓기 위해 header 붙여줌*/
-	margin: 0px 0px 0px 20px;	/* 버튼모양으로 오면 마진은 테두리 밖에다 주는거라 상관x 패딩은 버튼이 쏠림*/	
+
+#header ul>li {
+	margin: 0px 0px 0px 20px;
 	float: left;
 	font-size: 14px;
-}	
+}
 
 
-/* ******************네비(메인메뉴)****************** */
-
-
+/* ******************네비(메인메뉴)************************** */
 #nav ul>li {
 	float: left;
 	width: 250px;
 	font-size: 20px;
 	font-weight: bold;
 	text-align: center;
+	
+	/* border: 1px solid #000000; */
 }
 
-/* ******************컨텐츠(서브메뉴 있을 때)****************** */
-/* aside(서브메뉴)*/
+
+/* ****************** 컨텐츠(서브메뉴 있을때)************************** */
+/* aside(서브메뉴) */
 #contents>#aside {
 	margin: 0px 10px 0px 0px;
 	float: left;
@@ -123,7 +128,8 @@ a:active {color: #000000; text-decoration: none;}
 
 #contents>#aside>h2 {
 	height: 60px;
-	background-color:  #dddddd;
+	/* padding: 25px 0px 25px 0px; */
+	background-color: #dddddd;
 	text-align: center;
 	font-size: 20px;
 	line-height: 60px;
@@ -136,39 +142,37 @@ a:active {color: #000000; text-decoration: none;}
 	font-size: 14px;
 }
 
-/* ******************메인컨텐트****************** */
 
-
+/* 메인컨텐트 */
 #contents>#main-content {
 	float: left;
 	width: 820px;
 }
 
-
-
-#contents>#main-content>#main-content-header {
+#contents>#main-content> #main-content-header {
 	padding: 18px 0px 5px 0px;
-	border-bottom: 1px solid #bfbfbf;
+	border-bottom: 1px solid #bfbfbf
 }
 
-#contents>#main-content>#main-content-header>h3 {
+#contents>#main-content> #main-content-header>h3 {
 	font-size: 18px;
 	font-weight: bold;
 }
 
 
-/* ******************푸터****************** */
 
+
+/* ******************푸터************************** */
 
 #footer {
 	text-align: center;
-	font-size:  12px;
+	font-size: 12px;
 }
 
 /*
 #footer div {
 	text-align: center;
-	font-size:  12px;
+	font-size: 12px;
 	line-height: 50px;
 }
 */
