--- a/views/board/list.html
+++ b/views/board/list.html
@@ -1,143 +1,159 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="/javaStudy/workspace_front/mysite/assets/css/mysite.css">
-<link rel="stylesheet" href="/javaStudy/workspace_front/mysite/assets/css/board.css">
+	<head>
+		<meta charset="UTF-8">
+		<title>sub page</title>
+		<link rel="stylesheet"  href="../../assets/css/mysite.css">
+		<link rel="stylesheet"  href="../../assets/css/board.css">
 		
-</head>
-<body>	
-
-<div id="wrap">
-	<div id="header" class="clearfix">
-		<h1>Mysite</h1>		
-		<ul class="clearfix">			<!-- 티는 안나지만 확실하게 하기 위해 clearfix 사용 -->
-			<li><a href="">로그인</a></li>
-			<li><a href="">회원가입</a></li>
-		</ul>
-	</div>
-	<!-- //header --> 
-	  
-	<div id="nav">
-		<ul class="clearfix">
-			<li>입사지원서</li> 
-			<li>게시판</li>
-			<li>갤러리</li>
-			<li>방명록</li>
-		</ul>
-	</div>
-	<!-- //nav -->
+	</head>
 	
+	<body>
 	
-	<div id="contents" class="clearfix">
-		<div id="aside">
-			<h2>게시판</h2>
-			
-			<ul>
-				<li>일반게시판</li>
-				<li>댓글게시판</li>
-				<li>첨부게시판</li>
-			</ul>
-		</div>		
-		<!-- aside -->
-		
-		<div id="main-content">
-			<div id="main-content-header" class="clearfix">
-				<div>
-					<h3>일반게시판</h3>
-				</div>
-				<div>
-					<ol class="clearfix">
-						<li>홈</li>
-						<li>게시판</li>
-						<li class="last">일반게시판</li>	
-					</ol>
-        		</div>				
+		<div id="wrap">
+			<div id="header" class="clearfix">
+				<h1>MySite</h1>
+				<ul class="clearfix"> 
+					<li><a href="#">로그인</a></li>
+					<li><a href="#">회원가입</a></li>
+				</ul>
 			</div>
-			<div>
-				<table>
-		    	<colgroup>
-		    		<col style= "width: 70px;">
-		    		<col style= "width: 300px;">
-		    		<col style= "width: 150px;">
-		    		<col style= "width: 150px;">
-		    		<col style= "width: 100px;">
-		    		<col style= "width: 100px;">
-		    	</colgroup>
-		    	<thead>
-		    		<tr>
-		    			<th>번호</th>
-		    			<th>제목</th>
-		    			<th>글쓴이</th>
-		    			<th>조회수</th>
-		    			<th>작성일</th>
-		    			<th></th>
-		    		</tr>
-		    	</thead>
-		    	<tbody>
-		    		<tr>
-		  				<td>aaaa</td>
-		  				<td>bbbbbbbbbbbb</td>
-		  				<td>ccccccc</td>
-		  				<td>ddddddd</td>
-		  				<td>ddddddd</td>
-		  				<td>삭제</td>
-		    		</tr>
-		    		<tr>
-		  				<td>aaaa</td>
-		  				<td>bbbbbbbbbbbb</td>
-		  				<td>ccccccc</td>
-		  				<td>ddddddd</td>
-		  				<td>ddddddd</td>
-		  				<td>삭제</td>
-		    		</tr>
-		    		<tr>
-		  				<td>aaaa</td>
-		  				<td>bbbbbbbbbbbb</td>
-		  				<td>ccccccc</td>
-		  				<td>ddddddd</td>
-		  				<td>ddddddd</td>
-		  				<td>삭제</td>
-		    		</tr>
-		    		<tr>
-		  				<td>aaaa</td>
-		  				<td>bbbbbbbbbbbb</td>
-		  				<td>ccccccc</td>
-		  				<td>ddddddd</td>
-		  				<td>ddddddd</td>
-		  				<td>삭제</td>
-		    		</tr>
-		    		<tr class="tr-bb">
-		  				<td>aaaa</td>
-		  				<td>bbbbbbbbbbbb</td>
-		  				<td>ccccccc</td>
-		  				<td>ddddddd</td>
-		  				<td>ddddddd</td>
-		  				<td>삭제</td>
-		    		</tr>
-		    	</tbody>
-		    
-		    
-		    </table>
+			<!-- //header -->
+		
+			<div id="nav">
+				<ul class="clearfix">
+					<li>입사지원서</li>
+					<li>게시판</li>
+					<li>갤러리</li>
+					<li>방명록</li>
+				</ul>
+			</div>
+			<!-- //nav -->
+		
+		
+			<div id="contents" class="clearfix">
+				<div id="aside">
+					<h2>게시판</h2>
 				
+					<ul>
+						<li>일반게시판</li>
+						<li>댓글게시판</li>
+						<li>첨부게시판</li>
+					</ul>
+				</div>
+				<!-- //aside -->
+				
+				<div id="main-content">
+					<div id="main-content-header" class="clearfix">
+						<h3>일반게시판</h3>
+					
+						<ol class="clearfix">
+							<li class="next-after">홈</li>
+							<li class="next-after">게시판</li>
+							<li>일반게시판</li>
+						</ol>
+					</div>
+					<!-- //main-content-header -->
+					<div id="search-button" class="clearfix">
+						<input class="search-bar" type="text">
+						<button class="btn" type="submit">검색</button>
+					</div>
+					<!-- search-button -->
+					<div id="list">
+						<table>
+							<colgroup>
+								<col style="width : 80px">
+								<col style="width : 350px">
+								<col style="width : 150px">
+								<col style="width : 150px">
+								<col style="width : 250px">
+								<col style="width : 120px">
+							</colgroup>
+							
+							<thead>
+								<tr>
+									<th>번호</th>
+									<th>제목</th>
+									<th>글쓴이</th>
+									<th>조회수</th>
+									<th>작성일</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>aaaa</td>
+									<td>bbbbbbbbbb</td>
+									<td>ccccc</td>
+									<td>ddddddd</td>
+									<td>ddddddd</td>
+									<td>삭제</td>
+								</tr>
+								<tr>
+									<td>aaaa</td>
+									<td>bbbbbbbbbb</td>
+									<td>ccccc</td>
+									<td>ddddddd</td>
+									<td>ddddddd</td>
+									<td>삭제</td>
+								</tr>
+								<tr>
+									<td>aaaa</td>
+									<td>bbbbbbbbbb</td>
+									<td>ccccc</td>
+									<td>ddddddd</td>
+									<td>ddddddd</td>
+									<td>삭제</td>
+								</tr>
+								<tr>
+									<td>aaaa</td>
+									<td>bbbbbbbbbb</td>
+									<td>ccccc</td>
+									<td>ddddddd</td>
+									<td>ddddddd</td>
+									<td>삭제</td>
+								</tr>
+								<tr class="border-bold">
+									<td>aaaa</td>
+									<td>bbbbbbbbbb</td>
+									<td>ccccc</td>
+									<td>ddddddd</td>
+									<td>ddddddd</td>
+									<td>삭제</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- list - table -->
+					<div id="table-number" class="clearfix">
+						<ul>
+							<li>◀</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>6</li>
+							<li>7</li>
+							<li>8</li>
+							<li>9</li>
+							<li>10</li>
+							<li>▶</li>
+						</ul>
+						<button class="btn write-button" type="button">글쓰기</button>					
+					</div>
+					
+				</div>	
+				<!-- //main-content -->
 			</div>
-			
-	<!--main-content-header-->
+			<!-- //contents -->
+		
+			<div id="footer">
+				Copyright ⓒ 2020 유지은, All right reserved
+			</div>
+			<!-- //footer -->
 		</div>
-	<!-- //main-contents -->
-	
-	</div>
-	<!-- //contents -->
-	
-	<div id="footer">
-			Copyright ⓒ 2020 유지은, All right reserved
-	</div>
-	<!-- //footer -->
-	
-	
-</div>
-<!-- //wrap-->
-
-</body>
+		<!-- //wrap -->
+		
+	</body>
 </html>
